@@ -1,3 +1,9 @@
+2013-11-01  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/dt_impl.h (dtrace_hdl_t.dt_procfs_path): Remove, unused.
+	* libdtrace/dt_open.c (dt_vopen): Just call Pset_procfs_path() directly.
+	* libdtrace/dt_options.c (dt_opt_procfs_path): Likewise.
+
 2013-10-31  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libdtrace/dtrace.h (dtrace_stmtdesc_t): Add padding to work
